--- a/index.html
+++ b/index.html
@@ -2,11 +2,305 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>HTML Academy: Техномарт | Главная</title>
   </head>
   <body>
+    <header>
+      <div>
+        <div>
+          <h1>Техномарт</h1>
+          <form action="" method="GET">
+            <input type="search" placeholder="Поиск:" name="header_search" required>
+          </form>
+          <ul>
+            <li>
+              <a href="#">Закладки: <span>0</span></a>
+            </li>
+            <li>
+              <a href="#">Корзина: <span>0</span></a>
+            </li>
+          </ul>
+          <a href="#">Оформить заказ</a>
+        </div>
+      </div>
+      <div>
+        <p>
+          Интернет-магазин строительных материалов и инструментов для ремонт
+        </p>
+        <ul>
+          <li>
+            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          </li>
+          <li>
+            <address>
+              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+            </address>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <button type="button">Войти</button>
+          </li>
+          <li>
+            <button type="button">Регистрация</button>
+          </li>
+        </ul>
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <span>Главная</span>
+          </li>
+          <li>
+            <a href="#">Компания</a>
+          </li>
+          <li>
+            <a href="catalog.html">Каталог</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Спецпредложение</a>
+          </li>
+          <li>
+            <a href="#">Доставка</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Материалы</h2>
+        <h3>На любой вкус</h3>
+        <figure>
+          <a href="#">
+            <img src="#" width="#" height="#" alt="3">
+          </a>
+        </figure>
+        <h2>Инструменты</h2>
+        <h3>На все случаи жизни</h3>
+        <figure>
+          <a href="#">
+            <img src="#" width="#" height="#" alt="3">
+          </a>
+        </figure>
+        <h2>Техника</h2>
+        <h3>Для стройки</h3>
+        <figure>
+          <a href="#">
+            <img src="#" width="#" height="#" alt="3">
+          </a>
+        </figure>
+        <h2>Скидка 50%</h2>
+        <h3>На 350 товаров</h3>
+        <figure>
+          <a href="#">
+            <img src="#" width="#" height="#" alt="3">
+          </a>
+        </figure>
+        <h2>Доставка</h2>
+        <h3>Бесплатно</h3>
+        <figure>
+          <a href="#">
+            <img src="#" width="#" height="#" alt="3">
+          </a>
+        </figure>
+        <h2>Перфораторы</h2>
+        <h3>Настоящие мужские игрушки</h3>
+        <figure>
+          <a href="#">
+            <img src="#" width="#" height="#" alt="3">
+          </a>
+        </figure>
+        <ul>
+          <button type="button">Открыть каталог</button>
+        </ul>  
+      </section>
+      <section>
+        <h1>Популярные товары:</h1>
+        <ul>
+          <button type="button">Все популярные товары</button>
+        </ul>  
+  <!-- Здесь будет картинка-ссылка -->
+  <!-- Здесь будет картинка-ссылка -->
+  <!-- Здесь будет картинка-ссылка -->
+  <!-- Здесь будет картинка-ссылка -->
+      </section>
+      <section>
+        <h1>Популярные производители:</h1>
+        <ul>
+          <button type="button">Все производители</button>
+          <figure>
+            <a href="Bosch">
+              <img src="#" width="#" height="#" alt="3">
+            </a>
+          </figure>
+          <figure>
+            <a href="Makita">
+              <img src="#" width="#" height="#" alt="3">
+            </a>
+          </figure>
+          <figure>
+            <a href="Dewalt">
+              <img src="#" width="#" height="#" alt="3">
+            </a>
+          </figure>
+          <figure>
+            <a href="Интерскол">
+              <img src="#" width="#" height="#" alt="3">
+            </a>
+          </figure>
+          <figure>
+            <a href="Hitachi">
+              <img src="#" width="#" height="#" alt="3">
+            </a>
+          </figure>
+          <figure>
+            <a href="LG">
+              <img src="#" width="#" height="#" alt="3">
+            </a>
+          </figure>
+          <figure>
+            <a href="AEG">
+              <img src="#" width="#" height="#" alt="3">
+            </a>
+          </figure>
+          <figure>
+            <a href="metabo">
+              <img src="#" width="#" height="#" alt="3">
+            </a>
+          </figure>
+        </ul>  
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <section>
+      <h1>Сервисы</h1>
+      <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+      </section>
+      <nav>
+        <ul>
+          <li>
+            <span>Доставка</span>
+          </li>
+          <li>
+            <a href="#">Гарантия</a>
+          </li>
+          <li>
+            <a href="#">Кредит</a>
+          </li>
+          </li>
+        </ul>
+      </nav>
+      <h1>Доставка</h1>
+      <p>Мы с удовольствием доставим ваш товар прямо<br>
+        к вашему подъезду совершенно бесплатно!<br>
+        Ведь мы неплохо заработаем,<br>
+        поднимая его на ваш этаж!<br></p>
+      </section>
+      <section>
+        <div>
+        <h1>КОМПАНИЯ "ТЕХНОМАРТ"</h1>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров<br> 
+          для ремонта и строительства не оставит равнодушными любителей<br> сэкономить на гастарбайтерах.</p>
 
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          Техномарт работает со многими транспортными компаниями:</p>
+          <ul>
+            <h2>Деловые линии</h2>
+            <h2>Автотрейдинг</h2>
+            <h2>ЖелДорЭкспедиция</h2>
+          </ul>
+          <ul>
+            <button type="button">ПОДРОБНЕЕ О КОМПАНИИ</button>
+          </ul>
+          </div>
+          <div>
+            <h1>КОНТАКТЫ</h1>
+            <p>Вы можете забрать товар сами,<br>
+              заехав в наш офис:</p>
+                <!-- Здесь будет карта -->
+                <ul>
+                  <button type="button">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</button>
+                </ul>                
+          </div>
+
+      </section>
+    </main>
+    <footer>
+      <section>
+      <h1>Техномарт</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Компания</a>
+          </li>
+          <li>
+            <a href="catalog.html">Каталог</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Спецпредложение</a>
+          </li>
+          <li>
+            <a href="#">Доставка</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <ul>
+          <address>
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+          </address>
+      </ul>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Материалы</a>
+          </li>
+          <li>
+            <a href="#">Техника</a>
+          </li>
+          <li>
+            <a href="#">Инструменты</a>
+          </li>
+          <li>
+            <a href="#">Спецпредложение</a>
+          </li>
+        </ul>
+      </nav>
+    </section>
+    <section>
+      <h2>&copy;2010–2019 Компания «Техномарт»<br>
+        Все права защищены</h2>
+        <ul>
+          <li>
+            <a href="#">Вконтакте</a>
+          </li>
+          <li>
+            <a href="#">Фейсбук</a>
+          </li>
+          <li>
+            <a href="#">Инстаграм</a>
+          </li>
+        </ul>
+        <p>
+          Обратная связь:
+          <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+        <p>
+          Разработано:
+          <a href="https://htmlacademy.ru">HTML Academy</a>
+        </p>
+      </section>
+
+    </footer>
   </body>
 </html>
