--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
           </form>
           <ul>
             <li>
-              <a href="#">Закладки: <span>0</span></a>
+              <a href="#">ЗАКЛАДКИ: <span>0</span></a>
             </li>
             <li>
               <a href="#">Корзина: <span>0</span></a>
